# advanced_modern_cpp_2

exercises_unit_8/: CMakeLists.txt  requirements.txt
exercises_unit_8/src/: demo_81.cpp  demo_83  demo_83.cpp  demo_85  demo_85.cpp  validate_user_input.cpp
laser_reader/: CMakeLists.txt
laser_reader/include/laser_reader/: laser_reader.h
laser_reader/src/: laser_reader.cpp  laser_subscriber.cpp
multithreading_exercises/: example1  example3  example4  exercise1  exercise1.cpp
unit5_demos/: demo_5_1
unit6_exercises/: CMakeLists.txt  commands.txt  package.xml
unit6_exercises/include/unit6_exercises/: magic_printer.h
unit6_exercises/src/: lambda_basics.cpp  magic_printer.cpp  main_magic_printer.cpp
unit6_exercises/src/examples/: basic_example_u6_specialization.cpp
